[gd_scene load_steps=4 format=3 uid="uid://d2yfwkqunknbf"]

[ext_resource type="Script" path="res://script/main.gd" id="1_pgnr8"]
[ext_resource type="PackedScene" uid="uid://4i03ua8e5end" path="res://mana_harvest.tscn" id="2_ghu4h"]
[ext_resource type="PackedScene" uid="uid://dxrv450m03klr" path="res://mana_backend.tscn" id="3_rjkev"]

[node name="main" type="Node2D"]
script = ExtResource("1_pgnr8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SideBar" type="Panel" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 60.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SideBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManaButton" type="Button" parent="CanvasLayer/SideBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Mana"

[node name="ExpButton" type="Button" parent="CanvasLayer/SideBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Exp"

[node name="ManaHarvest" parent="CanvasLayer" instance=ExtResource("2_ghu4h")]
offset_left = 60.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ManaBackend" parent="." instance=ExtResource("3_rjkev")]

[connection signal="button_down" from="CanvasLayer/SideBar/VBoxContainer/ManaButton" to="." method="_on_mana_button_button_down"]
[connection signal="button_down" from="CanvasLayer/SideBar/VBoxContainer/ExpButton" to="." method="_on_exp_button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
